--- a/package.json
+++ b/package.json
@@ -1,37 +1,48 @@
 {
-  "name": "angular-sweetalert-service",
-  "version": "2.0.2",
+  "$schema": "./node_modules/ng-packagr/package.schema.json",
+  "name": "ng-sweetalert-service",
+  "version": "1.1.0",
   "description": "Angular wrapper for SweetAlert2",
-  "main": "js/index.js",
-  "typings": "js/index",
+  "main": "lib/index.js",
+  "ngPackage": {
+    "lib": {
+      "entryFile": "lib/index.ts"
+    },
+    "whitelistedNonPeerDependencies": [
+      "sweetalert2"
+    ]
+  },
   "scripts": {
+    "build": "ng-packagr -p package.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/juan-manuel-alberro/angular-sweetalert2"
+    "url": "https://github.com/breningham/angular-sweetalert2"
   },
   "keywords": [
     "typescript",
     "angular",
     "sweetalert2"
   ],
-  "author": "Juan Manuel Alberro <jalberro@gmail.com>",
+  "author": "Brendan Ingham <brendan.ingham13@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/juan-manuel-alberro/angular-sweetalert2/issues"
+    "url": "https://github.com/breningham/angular-sweetalert2/issues"
   },
-  "homepage": "https://github.com/juan-manuel-alberro/angular-sweetalert2#readme",
+  "homepage": "https://github.com/breningham/angular-sweetalert2#readme",
   "dependencies": {
-    "@angular/core": "^4.0.3",
-    "@angular/platform-browser": "^4.0.3",
-    "object-assign": "^4.1.1",
-    "sweetalert2": "^6.6.1"
+    "sweetalert2": "^7.24.3"
+  },
+  "peerDependencies": {
+    "@angular/core": "^6.0.7",
+    "@angular/platform-browser": "^6.0.7"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.41",
-    "@types/rx": "^4.1.1",
-    "rxjs": "^5.3.0",
-    "typescript": "^2.2.2"
+    "@angular/compiler": "^6.0.7",
+    "@angular/compiler-cli": "^6.0.7",
+    "ng-packagr": "^3.0.3",
+    "rxjs": "^6.2.1",
+    "typescript": "~2.7.2"
   }
 }
